[temporary?] workaround to table sizing bugs on FF and safari, causing wide ValidationTextBox widgets to have an <input> field that's too narrow (with blank space after it).  Still need to fix plain TextBox.  Also, doesn't address the IE issue that typing too much text will cause the field to expand past specified width.  Refs #4444.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@10798 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/tundra/tundra.css
+++ b/themes/tundra/tundra.css
@@ -249,8 +249,11 @@
 	 * workaround browser (FF and safari) sizing bugs when last table column is empty or display:null
 	 */
 	display: block;
+	width: 16px;
 	height: 16px;
-	width: 1px;
+	background-repeat: no-repeat;
+	background-image: url('images/warning.png');
+	visibility: hidden;
 }
 .tundra .dijitValidationIconText {
 	display: none;
@@ -259,10 +262,7 @@
 .tundra .dijitTextBoxError .dijitValidationIcon,
 .tundra .dijitComboBoxError .dijitValidationIcon,
 .tundra .dijitSpinnerError .dijitValidationIcon {
-	width: 16px;
-	height: 16px;
-	background-repeat: no-repeat;
-	background-image: url('images/warning.png');
+	visibility: visible;
 }
 
 /*
